--- a/main(eng).ui
+++ b/main(eng).ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Masking Tool</string>
+   <string>세그멘테이션 툴</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QGroupBox" name="groupBox">
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="title">
-     <string>File List</string>
+     <string>File list</string>
     </property>
     <widget class="QPushButton" name="button_imgPath">
      <property name="geometry">
@@ -39,7 +39,7 @@
       <enum>Qt::NoFocus</enum>
      </property>
      <property name="text">
-      <string>Select Image Folder</string>
+      <string>Load image folder</string>
      </property>
     </widget>
     <widget class="QPushButton" name="button_maskPath">
@@ -55,7 +55,7 @@
       <enum>Qt::NoFocus</enum>
      </property>
      <property name="text">
-      <string>Select Mask Folder</string>
+      <string>Load mask folder</string>
      </property>
     </widget>
     <widget class="QListWidget" name="listWidget_img">
@@ -94,7 +94,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>Current Image Path</string>
+      <string>Current image</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_3">
@@ -107,7 +107,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>Current Mask Path</string>
+      <string>Current mask</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_8">
@@ -153,22 +153,22 @@
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
-      <x>1160</x>
+      <x>1180</x>
       <y>10</y>
-      <width>231</width>
-      <height>171</height>
+      <width>221</width>
+      <height>161</height>
      </rect>
     </property>
     <property name="title">
-     <string>Last Image</string>
+     <string>Last image</string>
     </property>
     <widget class="QLabel" name="label_lastImg">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>20</y>
-       <width>211</width>
-       <height>141</height>
+       <width>201</width>
+       <height>131</height>
       </rect>
      </property>
      <property name="layoutDirection">
@@ -194,22 +194,22 @@
    <widget class="QGroupBox" name="groupBox_3">
     <property name="geometry">
      <rect>
-      <x>1400</x>
+      <x>1410</x>
       <y>10</y>
-      <width>231</width>
-      <height>171</height>
+      <width>221</width>
+      <height>161</height>
      </rect>
     </property>
     <property name="title">
-     <string>Next Image</string>
+     <string>Next image</string>
     </property>
     <widget class="QLabel" name="label_nextImg">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>20</y>
-       <width>211</width>
-       <height>141</height>
+       <width>201</width>
+       <height>131</height>
       </rect>
      </property>
      <property name="autoFillBackground">
@@ -236,7 +236,7 @@
      </rect>
     </property>
     <property name="title">
-     <string>Current Image</string>
+     <string>Current image</string>
     </property>
     <widget class="QLabel" name="label_canvasImg">
      <property name="geometry">
@@ -266,19 +266,19 @@
      <rect>
       <x>710</x>
       <y>10</y>
-      <width>221</width>
+      <width>241</width>
       <height>241</height>
      </rect>
     </property>
     <property name="title">
-     <string>Brush Setting</string>
+     <string>Brush setting</string>
     </property>
     <widget class="QComboBox" name="comboBox_lineThick">
      <property name="geometry">
       <rect>
        <x>80</x>
-       <y>40</y>
-       <width>51</width>
+       <y>20</y>
+       <width>61</width>
        <height>22</height>
       </rect>
      </property>
@@ -289,21 +289,21 @@
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>40</y>
+       <x>20</x>
+       <y>20</y>
        <width>61</width>
        <height>21</height>
       </rect>
      </property>
      <property name="text">
-      <string>Thickness</string>
+      <string>Tickness</string>
      </property>
     </widget>
     <widget class="QPushButton" name="button_colorNow">
      <property name="geometry">
       <rect>
-       <x>140</x>
-       <y>40</y>
+       <x>150</x>
+       <y>20</y>
        <width>71</width>
        <height>23</height>
       </rect>
@@ -321,10 +321,10 @@
     <widget class="QPushButton" name="button_color1">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>80</y>
-       <width>51</width>
-       <height>51</height>
+       <x>20</x>
+       <y>70</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -353,9 +353,9 @@
      <property name="geometry">
       <rect>
        <x>60</x>
-       <y>80</y>
-       <width>51</width>
-       <height>51</height>
+       <y>70</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -371,10 +371,10 @@
     <widget class="QPushButton" name="button_color4">
      <property name="geometry">
       <rect>
-       <x>160</x>
-       <y>80</y>
-       <width>51</width>
-       <height>51</height>
+       <x>140</x>
+       <y>70</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -390,10 +390,10 @@
     <widget class="QPushButton" name="button_color3">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>80</y>
-       <width>51</width>
-       <height>51</height>
+       <x>100</x>
+       <y>70</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -409,10 +409,10 @@
     <widget class="QPushButton" name="button_color8">
      <property name="geometry">
       <rect>
-       <x>160</x>
-       <y>130</y>
-       <width>51</width>
-       <height>51</height>
+       <x>100</x>
+       <y>110</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -428,10 +428,10 @@
     <widget class="QPushButton" name="button_color5">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>130</y>
-       <width>51</width>
-       <height>51</height>
+       <x>180</x>
+       <y>70</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -447,10 +447,10 @@
     <widget class="QPushButton" name="button_color6">
      <property name="geometry">
       <rect>
-       <x>60</x>
-       <y>130</y>
-       <width>51</width>
-       <height>51</height>
+       <x>20</x>
+       <y>110</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -466,10 +466,10 @@
     <widget class="QPushButton" name="button_color7">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>130</y>
-       <width>51</width>
-       <height>51</height>
+       <x>60</x>
+       <y>110</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -485,10 +485,10 @@
     <widget class="QPushButton" name="button_color12">
      <property name="geometry">
       <rect>
-       <x>160</x>
-       <y>180</y>
-       <width>51</width>
-       <height>51</height>
+       <x>60</x>
+       <y>150</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -504,10 +504,10 @@
     <widget class="QPushButton" name="button_color9">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>180</y>
-       <width>51</width>
-       <height>51</height>
+       <x>140</x>
+       <y>110</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -523,10 +523,10 @@
     <widget class="QPushButton" name="button_color10">
      <property name="geometry">
       <rect>
-       <x>60</x>
-       <y>180</y>
-       <width>51</width>
-       <height>51</height>
+       <x>180</x>
+       <y>110</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -542,10 +542,10 @@
     <widget class="QPushButton" name="button_color11">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>180</y>
-       <width>51</width>
-       <height>51</height>
+       <x>20</x>
+       <y>150</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -556,6 +556,189 @@
      </property>
      <property name="text">
       <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color13">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>150</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color14">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>150</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color15">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>150</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color16">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>190</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color17">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>190</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color18">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>190</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color19">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>190</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color20">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>190</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color0">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>50</y>
+       <width>201</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="contextMenuPolicy">
+      <enum>Qt::DefaultContextMenu</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
+     <property name="default">
+      <bool>false</bool>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
      </property>
     </widget>
    </widget>
@@ -572,7 +755,7 @@
      <enum>Qt::NoFocus</enum>
     </property>
     <property name="text">
-     <string>Auto Save on Move</string>
+     <string>Autosave</string>
     </property>
    </widget>
    <widget class="QGroupBox" name="groupBox_6">
@@ -585,7 +768,7 @@
      </rect>
     </property>
     <property name="title">
-     <string>Mixed Image</string>
+     <string>Mixed image</string>
     </property>
     <widget class="QLabel" name="label_mixImg">
      <property name="geometry">
@@ -620,7 +803,7 @@
      </rect>
     </property>
     <property name="title">
-     <string>Segmentation Image</string>
+     <string>Segmentation image</string>
     </property>
     <widget class="QLabel" name="label_segImg">
      <property name="geometry">
@@ -690,7 +873,7 @@
      <enum>Qt::NoFocus</enum>
     </property>
     <property name="text">
-     <string>Save Image</string>
+     <string>Save</string>
     </property>
    </widget>
    <widget class="QPushButton" name="button_repaint">
@@ -706,7 +889,7 @@
      <enum>Qt::NoFocus</enum>
     </property>
     <property name="text">
-     <string>Repaint Image</string>
+     <string>Repaint</string>
     </property>
    </widget>
    <widget class="QDial" name="dial_img">
@@ -722,7 +905,7 @@
    <widget class="QGroupBox" name="groupBox_8">
     <property name="geometry">
      <rect>
-      <x>940</x>
+      <x>960</x>
       <y>10</y>
       <width>211</width>
       <height>241</height>
@@ -731,6 +914,19 @@
     <property name="title">
      <string>Score</string>
     </property>
+    <widget class="QLabel" name="label_5">
+     <property name="geometry">
+      <rect>
+       <x>190</x>
+       <y>100</y>
+       <width>21</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>개</string>
+     </property>
+    </widget>
     <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
@@ -741,7 +937,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>Painted Images</string>
+      <string>Painted images</string>
      </property>
     </widget>
     <widget class="QLCDNumber" name="lcdNumber_done">
@@ -749,7 +945,7 @@
       <rect>
        <x>10</x>
        <y>40</y>
-       <width>191</width>
+       <width>181</width>
        <height>81</height>
       </rect>
      </property>
@@ -775,6 +971,19 @@
       <number>0</number>
      </property>
     </widget>
+    <widget class="QLabel" name="label_6">
+     <property name="geometry">
+      <rect>
+       <x>190</x>
+       <y>200</y>
+       <width>21</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>개</string>
+     </property>
+    </widget>
     <widget class="QLabel" name="label_7">
      <property name="geometry">
       <rect>
@@ -785,7 +994,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>Remaining Images</string>
+      <string>Left images</string>
      </property>
     </widget>
     <widget class="QLCDNumber" name="lcdNumber_do">
@@ -793,7 +1002,7 @@
       <rect>
        <x>10</x>
        <y>150</y>
-       <width>191</width>
+       <width>181</width>
        <height>81</height>
       </rect>
      </property>
@@ -823,9 +1032,9 @@
    <widget class="QProgressBar" name="progressBar_work">
     <property name="geometry">
      <rect>
-      <x>1160</x>
-      <y>192</y>
-      <width>481</width>
+      <x>1180</x>
+      <y>182</y>
+      <width>461</width>
       <height>51</height>
      </rect>
     </property>
