--- a/main(kor).ui
+++ b/main(kor).ui
@@ -153,10 +153,10 @@
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
-      <x>1160</x>
+      <x>1180</x>
       <y>10</y>
-      <width>231</width>
-      <height>171</height>
+      <width>221</width>
+      <height>161</height>
      </rect>
     </property>
     <property name="title">
@@ -167,8 +167,8 @@
       <rect>
        <x>10</x>
        <y>20</y>
-       <width>211</width>
-       <height>141</height>
+       <width>201</width>
+       <height>131</height>
       </rect>
      </property>
      <property name="layoutDirection">
@@ -194,10 +194,10 @@
    <widget class="QGroupBox" name="groupBox_3">
     <property name="geometry">
      <rect>
-      <x>1400</x>
+      <x>1410</x>
       <y>10</y>
-      <width>231</width>
-      <height>171</height>
+      <width>221</width>
+      <height>161</height>
      </rect>
     </property>
     <property name="title">
@@ -208,8 +208,8 @@
       <rect>
        <x>10</x>
        <y>20</y>
-       <width>211</width>
-       <height>141</height>
+       <width>201</width>
+       <height>131</height>
       </rect>
      </property>
      <property name="autoFillBackground">
@@ -266,7 +266,7 @@
      <rect>
       <x>710</x>
       <y>10</y>
-      <width>221</width>
+      <width>241</width>
       <height>241</height>
      </rect>
     </property>
@@ -276,8 +276,8 @@
     <widget class="QComboBox" name="comboBox_lineThick">
      <property name="geometry">
       <rect>
-       <x>60</x>
-       <y>40</y>
+       <x>70</x>
+       <y>20</y>
        <width>61</width>
        <height>22</height>
       </rect>
@@ -289,8 +289,8 @@
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>40</y>
+       <x>20</x>
+       <y>20</y>
        <width>41</width>
        <height>21</height>
       </rect>
@@ -302,8 +302,8 @@
     <widget class="QPushButton" name="button_colorNow">
      <property name="geometry">
       <rect>
-       <x>130</x>
-       <y>40</y>
+       <x>140</x>
+       <y>20</y>
        <width>81</width>
        <height>23</height>
       </rect>
@@ -321,10 +321,10 @@
     <widget class="QPushButton" name="button_color1">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>80</y>
-       <width>51</width>
-       <height>51</height>
+       <x>20</x>
+       <y>70</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -353,9 +353,9 @@
      <property name="geometry">
       <rect>
        <x>60</x>
-       <y>80</y>
-       <width>51</width>
-       <height>51</height>
+       <y>70</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -371,10 +371,10 @@
     <widget class="QPushButton" name="button_color4">
      <property name="geometry">
       <rect>
-       <x>160</x>
-       <y>80</y>
-       <width>51</width>
-       <height>51</height>
+       <x>140</x>
+       <y>70</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -390,10 +390,10 @@
     <widget class="QPushButton" name="button_color3">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>80</y>
-       <width>51</width>
-       <height>51</height>
+       <x>100</x>
+       <y>70</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -409,10 +409,10 @@
     <widget class="QPushButton" name="button_color8">
      <property name="geometry">
       <rect>
-       <x>160</x>
-       <y>130</y>
-       <width>51</width>
-       <height>51</height>
+       <x>100</x>
+       <y>110</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -428,10 +428,10 @@
     <widget class="QPushButton" name="button_color5">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>130</y>
-       <width>51</width>
-       <height>51</height>
+       <x>180</x>
+       <y>70</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -447,10 +447,10 @@
     <widget class="QPushButton" name="button_color6">
      <property name="geometry">
       <rect>
-       <x>60</x>
-       <y>130</y>
-       <width>51</width>
-       <height>51</height>
+       <x>20</x>
+       <y>110</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -466,10 +466,10 @@
     <widget class="QPushButton" name="button_color7">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>130</y>
-       <width>51</width>
-       <height>51</height>
+       <x>60</x>
+       <y>110</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -485,10 +485,10 @@
     <widget class="QPushButton" name="button_color12">
      <property name="geometry">
       <rect>
-       <x>160</x>
-       <y>180</y>
-       <width>51</width>
-       <height>51</height>
+       <x>60</x>
+       <y>150</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -504,10 +504,10 @@
     <widget class="QPushButton" name="button_color9">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>180</y>
-       <width>51</width>
-       <height>51</height>
+       <x>140</x>
+       <y>110</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -523,10 +523,10 @@
     <widget class="QPushButton" name="button_color10">
      <property name="geometry">
       <rect>
-       <x>60</x>
-       <y>180</y>
-       <width>51</width>
-       <height>51</height>
+       <x>180</x>
+       <y>110</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -542,10 +542,10 @@
     <widget class="QPushButton" name="button_color11">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>180</y>
-       <width>51</width>
-       <height>51</height>
+       <x>20</x>
+       <y>150</y>
+       <width>41</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="focusPolicy">
@@ -556,6 +556,189 @@
      </property>
      <property name="text">
       <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color13">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>150</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color14">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>150</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color15">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>150</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color16">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>190</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color17">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>190</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color18">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>190</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color19">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>190</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color20">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>190</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_color0">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>50</y>
+       <width>201</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
+     <property name="contextMenuPolicy">
+      <enum>Qt::DefaultContextMenu</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
+     <property name="default">
+      <bool>false</bool>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
      </property>
     </widget>
    </widget>
@@ -722,7 +905,7 @@
    <widget class="QGroupBox" name="groupBox_8">
     <property name="geometry">
      <rect>
-      <x>940</x>
+      <x>960</x>
       <y>10</y>
       <width>211</width>
       <height>241</height>
@@ -849,10 +1032,10 @@
    <widget class="QProgressBar" name="progressBar_work">
     <property name="geometry">
      <rect>
-      <x>1160</x>
-      <y>192</y>
-      <width>481</width>
-      <height>51</height>
+      <x>1180</x>
+      <y>182</y>
+      <width>461</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="value">
